--- a/Quotify/HistoryViewController2.xib
+++ b/Quotify/HistoryViewController2.xib
@@ -150,33 +150,26 @@ AAgACAAIAAEAAQABAAE</bytes>
 							<object class="IBUIActivityIndicatorView" id="431572154">
 								<reference key="NSNextResponder" ref="187000008"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{13, 12}, {37, 37}}</string>
+								<string key="NSFrame">{{142, 233}, {37, 37}}</string>
 								<reference key="NSSuperview" ref="187000008"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:1030</string>
-								<object class="NSColor" key="IBUIBackgroundColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC40MTU2ODYyNzQ1IDAuNTQxMTc2NDcwNiAwLjYyMzUyOTQxMTgAA</bytes>
-								</object>
 								<bool key="IBUIOpaque">NO</bool>
-								<float key="IBUIAlpha">0.5</float>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<bool key="IBUIHidesWhenStopped">NO</bool>
 								<bool key="IBUIAnimating">YES</bool>
 								<int key="IBUIStyle">0</int>
 							</object>
 						</array>
-						<string key="NSFrame">{{129, 221}, {62, 62}}</string>
+						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="431572154"/>
 						<string key="NSReuseIdentifierKey">_NS:196</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">2</int>
-							<bytes key="NSRGB">MC40MDAwMDAwMzU4IDAuNTI1NDkwMjI0NCAwLjYxMTc2NDcyOQA</bytes>
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC40MTU2ODYyNzQ1IDAuNTQxMTc2NDcwNiAwLjYyMzUyOTQxMTgAA</bytes>
 						</object>
-						<bool key="IBUIOpaque">NO</bool>
 						<float key="IBUIAlpha">0.5</float>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
